stack on iphone repaird

--- a/src/components/Stack/Stack.scss
+++ b/src/components/Stack/Stack.scss
@@ -43,7 +43,7 @@
 
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-        grid-template-rows: repeat(auto-fit, minmax(28%, 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(45%, 1fr));
         grid-gap: 2rem;
         grid-auto-rows: 130px;
 
